<resources>
    <string name="app_name">My Application</string>
    <string name="title_about">About</string>
    <string name="title_share">Share</string>
    <string name="title_settings">Settings</string>
    <string name="title_update">Update</string>
    <string name="title_rate">Rate</string>
    <string name="title_action1">Message</string>
    <string name="mehdi">Mehdi</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
</resources>
