<?xml version="1.0" encoding="utf-8"?>
    <menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/menu_action1"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="@string/title_action1"
            app:showAsAction="always">

        </item>

        <item android:title="Customize">
            <menu>
                <item
                    android:id="@+id/menu_update"
                    android:icon="@drawable/ic_update_black_24dp"
                    android:title="@string/title_update"
                    app:showAsAction="never">
                </item>

                <item
                    android:id="@+id/menu_settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/title_settings"
                    app:showAsAction="never"/>
            </menu>
        </item>

        <item android:title="Feedback us">
            <menu>
                <item
                    android:id="@+id/menu_share"
                    android:icon="@drawable/ic_share_black_24dp"
                    android:title="@string/title_share"
                    app:showAsAction="never"/>

                <item
                    android:id="@+id/menu_rate"
                    android:icon="@drawable/ic_star_black_24dp"
                    android:title="@string/title_rate"
                    app:showAsAction="never"/>

                <item
                    android:id="@+id/menu_about"
                    android:icon="@drawable/ic_info_black_24dp"
                    android:title="@string/title_about"
                    app:showAsAction="never"/>
            </menu>
        </item>
    </menu>
